--- a/main.css
+++ b/main.css
@@ -1,18 +1,20 @@
-body {
-    margin: 0;
-    padding: 0px;
+h1 {
+  text-align: center;
+  font-size: 32px;
+  font-weight: bold;
+  font-family: Georgian,sans-serif;
 }
 
-h1{
-	margin: 0;
-	color: red;
-	font-size: 30px;
-	font-family: "Georgia";
-	text-align: center;
+h2 {
+  text-align: center;
+  margin-left: 30px;
+  font-size: 24px;
+  font-weight: lighter;
+  font-family: Georgian,sans-serif;
 }
-.trial-button {
-	display: block;
-	color: orange;
-	background-color: black;
 
+input {
+  width: 100%;
+  height: 25px;
+  margin-bottom: 20px;
 }
